crates/vitte-cli/tests/snapshots/cli_syntax__help_run.snap
---
source: crates/vitte-cli/tests/cli_syntax.rs
assertion_line: 23
expression: "format!(\"status: {status}\\nstdout:\\n{stdout}\\\n            \\n---- stderr ----\\n{stderr}\")"
---
status: 1
stdout:

---- stderr ----
error: argument `--help` non reconnu pour `vitte run`
