crates/vitte-cli/tests/snapshots/cli_syntax__run_program_after_options.snap
---
source: crates/vitte-cli/tests/cli_syntax.rs
assertion_line: 23
expression: "format!(\"status: {status}\\nstdout:\\n{stdout}\\\n            \\n---- stderr ----\\n{stderr}\")"
---
status: 1
stdout:

---- stderr ----
error: le programme `main.vitte` doit être fourni avant les options de `vitte run`
